# teleporter

./: README.md  TODO.md  package.json  sample.json  svelte.config.js  vite.config.js
.github/workflows/: main.yml
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/src/: lib.rs  main.rs  options.rs  prelude.rs  teleporter_config.rs  tsh.rs  tsh_version.rs
src/routes/: +layout.svelte  +page.svelte
