[package]
name = "teleporter2"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
edition = "2021"


[lib]
name = "teleporter2_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]


[build-dependencies.tauri-build]
version = "2"
features = [ ]


[dependencies]
tauri-plugin-opener = "2"
serde_json = "1"
itertools = "0.14.0"
regex = "1.12.3"
directories = "6.0.0"
chrono = "0.4.44"
anyhow = "1.0.102"
ureq = "3.2.0"
tauri-plugin-log = "2"
log = "0.4.29"


[dependencies.tauri]
version = "2"
features = [ ]


[dependencies.serde]
version = "1"
features = [ "derive" ]


[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"


[profile.dev]
incremental = true


[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
